parser/tests/parser/complex/invalid/declaration_recovery_2.mf2
.foo $var
.local $hello = {world}
{{}}
=== spans ===
                    .foo $var↵.local $hello = {world}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 0:0-2:4
LocalDeclaration              ^^^^^^^^^^^^^^^^^^^^^^^      1:0-1:23
Variable                             ^^^^^^                1:7-1:13
LiteralExpression                             ^^^^^^^      1:16-1:23
Text                                           ^^^^^       1:17-1:22
QuotedPattern                                         ^^^^ 2:0-2:4
Pattern                                                    2:2-2:2
Text                                                       2:2-2:2
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..9)
  .foo $var↵.local $hello = {world}↵{{}}
  ^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..38,
    declarations: [
        LocalDeclaration {
            start: @10,
            variable: Variable {
                span: @17..23,
                name: "hello",
            },
            expression: LiteralExpression {
                span: @26..33,
                literal: Text {
                    start: @27,
                    content: "world",
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    body: QuotedPattern {
        span: @34..38,
        pattern: Pattern {
            parts: [
                Text {
                    start: @36,
                    content: "",
                },
            ],
        },
    },
}